--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>rush.io - Roblox FPS</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: Arial, sans-serif;
       background: linear-gradient(to right, #0f0f0f, #1a1a1a);
@@ -17,18 +13,9 @@
       padding: 40px 20px;
       line-height: 1.6;
     }
-    header {
-      text-align: center;
-      margin-bottom: 50px;
-    }
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 10px;
-    }
-    h2 {
-      font-size: 2rem;
-      margin: 40px 0 10px;
-    }
+    header { text-align: center; margin-bottom: 50px; }
+    h1 { font-size: 4rem; margin-bottom: 10px; }
+    h2 { font-size: 2rem; margin: 40px 0 10px; text-align: center; }
     p {
       font-size: 1.1rem;
       max-width: 800px;
@@ -48,17 +35,32 @@
       transition: 0.3s;
       margin-top: 20px;
     }
-    .play-btn:hover {
-      background: #009fcc;
-    }
+    .play-btn:hover { background: #009fcc; }
     .section {
       max-width: 900px;
       margin: 0 auto;
       margin-bottom: 60px;
     }
-    ul {
-      list-style: disc;
-      padding-left: 40px;
+    ul { list-style: disc; padding-left: 40px; }
+    iframe { display: block; margin: 20px auto; border-radius: 10px; }
+    .killlog {
+      font-family: monospace;
+      background: #1e1e1e;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 600px;
+      margin: 20px auto;
+      color: #00ccff;
+    }
+    .map-preview {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    .map-preview img {
+      width: 250px;
+      border-radius: 8px;
     }
     footer {
       text-align: center;
@@ -74,6 +76,11 @@
     <p>a simple gun game with bhop mechanics. (currently in beta)</p>
     <a class="play-btn" href="https://www.roblox.com/games/115765639656471/Beta" target="_blank">Play Now</a>
   </header>
+
+  <div class="section">
+    <h2>Gameplay Trailer</h2>
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="rush.io Trailer" frameborder="0" allowfullscreen></iframe>
+  </div>
 
   <div class="section">
     <h2>About the Game</h2>
@@ -93,13 +100,39 @@
   </div>
 
   <div class="section">
-    <h2>In Development</h2>
+    <h2>Map Previews</h2>
+    <div class="map-preview">
+      <img src="https://via.placeholder.com/250x150.png?text=Map+1" alt="Map 1">
+      <img src="https://via.placeholder.com/250x150.png?text=Map+2" alt="Map 2">
+      <img src="https://via.placeholder.com/250x150.png?text=Map+3" alt="Map 3">
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Live Kill Log (Example)</h2>
+    <div class="killlog">
+      radicnt slammed sweatykid123<br>
+      ITypeTooMuchCodes clapped NoScopeKing<br>
+      sweatykid123 ragequit<br>
+      radicnt headshotted NoScopeKing<br>
+      ITypeTooMuchCodes deleted everyone<br>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2>Development Roadmap</h2>
     <ul>
       <li>Weapon skins and customization</li>
       <li>Match history and leaderboard</li>
       <li>Settings UI (sensitivity, FOV, etc.)</li>
       <li>Private matches and custom lobbies</li>
     </ul>
+  </div>
+
+  <div class="section">
+    <h2>Join the Community</h2>
+    <p>Hop into our Discord to suggest features, report bugs, or just chill with the squad.</p>
+    <iframe src="https://discord.com/widget?id=000000000000000000&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
   </div>
 
   <div class="section">
