--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
   <title>rush.io - Roblox FPS</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: radial-gradient(circle at center, #0f0f0f, #050505);
       color: white;
-      padding: 40px 20px;
+      padding-top: 80px;
       line-height: 1.6;
       transition: background 0.5s ease;
       animation: fadeIn 2s ease;
@@ -18,6 +21,28 @@
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
+    }
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: #111;
+      padding: 15px 30px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      z-index: 1000;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
+    }
+    nav a {
+      color: #00ccff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #009fcc;
     }
     header {
       text-align: center;
@@ -67,6 +92,7 @@
       max-width: 900px;
       margin: 0 auto 60px auto;
       text-align: center;
+      padding: 20px;
     }
     ul {
       list-style: none;
@@ -117,6 +143,17 @@
   </style>
 </head>
 <body>
+  <nav>
+    <a href="#trailer">Trailer</a>
+    <a href="#about">About</a>
+    <a href="#features">Features</a>
+    <a href="#maps">Maps</a>
+    <a href="#killlog">Kill Log</a>
+    <a href="#roadmap">Roadmap</a>
+    <a href="#discord">Discord</a>
+    <a href="#credits">Credits</a>
+  </nav>
+
   <header>
     <h1>rush.io</h1>
     <p>a simple gun game with bhop mechanics. (currently in beta)</p>
@@ -129,17 +166,17 @@
     Your browser does not support the audio element.
   </audio>
 
-  <div class="section">
+  <div class="section" id="trailer">
     <h2>Gameplay Trailer</h2>
     <iframe width="720" height="405" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="rush.io Trailer" frameborder="0" allowfullscreen></iframe>
   </div>
 
-  <div class="section">
+  <div class="section" id="about">
     <h2>About the Game</h2>
     <p>rush.io is a fast-paced FPS inspired by classics like krunker.io. The focus is on pure skill, tight movement, and clean gunplay. The game features bhop mechanics for momentum-based movement and fluid traversal. Expect intensity and chaos in every match.</p>
   </div>
 
-  <div class="section">
+  <div class="section" id="features">
     <h2>Key Features</h2>
     <ul>
       <li>Smooth bhop-based movement mechanics</li>
@@ -151,7 +188,7 @@
     </ul>
   </div>
 
-  <div class="section">
+  <div class="section" id="maps">
     <h2>Map Previews</h2>
     <div class="map-preview">
       <img src="https://via.placeholder.com/250x150.png?text=Map+1" alt="Map 1">
@@ -160,7 +197,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="section" id="killlog">
     <h2>Live Kill Log (Example)</h2>
     <div class="killlog">
       radicnt slammed sweatykid123<br>
@@ -171,7 +208,7 @@
     </div>
   </div>
 
-  <div class="section">
+  <div class="section" id="roadmap">
     <h2>Development Roadmap</h2>
     <ul>
       <li>Weapon skins and customization</li>
@@ -181,13 +218,13 @@
     </ul>
   </div>
 
-  <div class="section">
+  <div class="section" id="discord">
     <h2>Join the Community</h2>
     <p>Hop into our Discord to suggest features, report bugs, or just chill with the squad.</p>
     <iframe src="https://discord.com/widget?id=1157372081141155860&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
   </div>
 
-  <div class="section">
+  <div class="section" id="credits">
     <h2>Credits</h2>
     <p>Game developed, built, and moderated by <strong>radicnt</strong> and <strong>ITypeTooMuchCodes</strong>.</p>
   </div>
